# diffdir

./: Cargo.toml  LICENSE  README.md  build.rs
src/: args.rs  diffcmp.rs  dirdiff.rs  lib.rs  main.rs
