[package]
name = "dirdiff"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.4.12", features = ["cargo", "derive"] }
md5 = "0.7.0"
rayon = "1.8.0"
walkdir = "2.4.0"
