[package]
name = "dirdiff"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
atty = "0.2.14"
clap = { version = "4.4.12", features = ["cargo", "derive"] }
glob = "0.3.1"
md5 = "0.7.0"
rayon = "1.8.0"
walkdir = "2.4.0"
